Fix: Item images are squished on offer page

--- a/slug_trade/static/css/styles.css
+++ b/slug_trade/static/css/styles.css
@@ -1861,6 +1861,7 @@ item-details-image-row-wrapper{
 
 .trade-offer-item-wrapper img {
   margin: 10px 0;
+  height: auto;
 }
 
 /************ item details slider **********/
